Refactor SparePartsPage component to include brand and model selection; enhance filtering functionality and improve UI elements. Remove password field from profile page. Update CSS for responsive design and carousel controls. Implement ProtectedRoute for role-based access control. Add AddProduct and SupplierProducts pages with form handling and product management features. Create Redux slices for search and spare parts management. Integrate socket connection for real-time updates.

--- a/src/index.css
+++ b/src/index.css
@@ -275,9 +275,39 @@ body {
   
 }
 
-@media (max-width: 768px) {
+@media (max-width: 968px) {
   .sidebar {
      margin-left: 0px !important;
+  }
+  
+}
+
+
+.carousel-control-prev{
+  position: absolute !important;
+  top: -30px !important;
+  left: -90px !important;
+}
+.carousel-control-next{
+  position: absolute !important;
+  right: -90px !important;
+  top: -30px !important;
+}
+
+.outline{
+  border-radius: 20px !important;
+  border: 1px solid #05976A !important;
+}
+@media screen and (max-width: 768px) {
+  .carousel-control-prev{
+    position: absolute !important;
+    top: -30px !important;
+    left: 0px !important;
+  }
+  .carousel-control-next{
+    position: absolute !important;
+    right: 0px !important;
+    top: -30px !important;
   }
   
 }
