--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
   right: 0;
   width: 95%;
   z-index: 0;
-  overflow-x: hidden !important;
+  overflow: hidden !important;
   margin: 0 auto;
   border-radius: 10px;
   padding: 1rem 2rem;
@@ -509,7 +509,7 @@ body {
     transform: scaleX(-1); /* Flip horizontally to face left */
   }
   100% {
-    left: 0px;   /* Move back outside left */
+    left: -10px;   /* Move back outside left */
     transform: scaleX(-1);
   }
 }
